--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- main css -->
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,10 +53,19 @@
       </div><!-- /.container-fluid -->
     </nav>
     </header>
-
+    <!-- page section, 9 grid -->
+    <section class="row">
+    <!-- main section -->
+    <main class="col-sm-9">
+    <h1>Hello World</h1>
+    </main><!-- end main page section -->
+    <!-- examples feed -->
+    <aside class="col-sm-3" >
       
+    </aside> <!-- end aside feed section -->
+    </section><!--page section -->
     </div><!--end page container-->
-
+    <script src="jquery-1.11.3.min.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
