--- a/index.html
+++ b/index.html
@@ -58,7 +58,23 @@
     <section class="row">
     <!-- main section -->
     <main class="col-sm-9">
-    <h1>Hello World</h1>
+    <!-- main header -->
+    <section class = "row">
+      <!--header and p-->
+      <div class="col-sm-8">
+        <h1>Creating the Web for Tomorrow</h1>
+        <!-- main p -->
+        <p>
+        Creating the Web for Today's Small Business and Tomorrow’s Success
+        Specializing in an Assortment of Design/Marketing Trends;
+        Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing.
+      </p>
+    </div>
+    <!--iamge-->
+    <div class="col-sm-4">
+      <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+    </div>
+    </section>
     </main><!-- end main page section -->
     <!-- examples feed -->
     <aside class="col-sm-3" >
