--- a/index.html
+++ b/index.html
@@ -56,29 +56,148 @@
     </header>
     <!-- page section, 9 grid -->
     <section class="row">
-    <!-- main section -->
-    <main class="col-sm-9">
-    <!-- main header -->
-    <section class = "row">
-      <!--header and p-->
+      <!-- main section -->
+      <main class="col-sm-9">
+      <!-- main header -->
+      <section class = "row">
+        <!--header and p-->
+        <div class="col-sm-4">
+          <h1>Creating the Web for Tomorrow</h1>
+          <!-- main p -->
+          <blockquote>
+            <p> 
+            Creating the Web for Today's Small Business and Tomorrow’s Success.
+            Specializing in an Assortment of Design/Marketing Trends;
+            Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing.
+          </p>
+        </blockquote>
+      </div>
+      <!--iamge-->
       <div class="col-sm-8">
-        <h1>Creating the Web for Tomorrow</h1>
-        <!-- main p -->
-        <p>
-        Creating the Web for Today's Small Business and Tomorrow’s Success
-        Specializing in an Assortment of Design/Marketing Trends;
-        Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing.
-      </p>
-    </div>
-    <!--iamge-->
-    <div class="col-sm-4">
-      <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
-    </div>
+        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+      </div>
+    </section>
+
+
+    <!--web design accordion-->
+    <section>
+      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Web Design
+                <img src="img/icon1.png" alt="Web Design">
+              </a>
+            </h4>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body">
+              <div class="row">
+              <!--web design info-->
+                <div class="col-md-7">
+                  <h2>Web Design and Development</h2>
+                  <p>These days the world seems to revolve around the Internet. More and more businesses are turning the Web to market and organize. Through my experience as an online business owner as well as experience through Full Sail University, I have gained a solid grasp on modern web design.
+                  As more and more users rely to their mobile devices for information and advice, it’s important to design websites around this fact. I have deep knowledge in Responsive Design and UX using HTML5, CSS3 and responsive frameworks.
+                  Staying current and update on styles and trends can be equally important as the layout of a web design itself. My artistic eye and knowledge of design trends adds a fresh look to my web creations that is both functional and eye-catching. 
+                  </p>
+              </div>
+              <div class="col-md-1"></div>
+              <blockquote id="accImg1" class="col-md-4">
+                <img class="img-responsive"src="img/logoImage.png">
+                <a class="btn btn-default" href="webDesign.html">Click Here to Learn More</a>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title">
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Social Marketing
+                <img src="img/icon2.png" alt="Marketing">
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div id="sm" class="panel-body">
+              <div class="row">
+              <!--Social Marketing info-->
+                <div class="col-md-7">
+                  <h2>Social Marketing</h2>
+                  <p>The Internet brings a unique opportunity to Small Businesses. Social Media has become a leading resource in Marketing to the masses; world-wide.  As the many turn to social websites, business too are seizing this opportunity to spread the visibility of their brand. Often this can be done organically or at a small advertising fee cost. When a campaign is executed correctly, this can level the playing field between small and big business.   
+                  I have 4+ years experience in in marketing through my own Facebook and created Etsy chat Forum. Through my own experience and countless hours of research, I am able to offer advice and create solutions to guide any business through the social channels to create the perfect online brand persona.
+                  </p>
+                  <a class="btn btn-default" href="sm.html">Click Here to Learn More</a>
+                </div>
+              <div class="col-md-1"></div>
+              <blockquote id="accImg1" class="col-md-4">
+                <img class="img-responsive"src="img/smImg.png">
+              </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title">
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Graphics/Multi-Media
+                <img src="img/icon3.png" alt="Graphic Design">
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div id = "gm"class="panel-body">
+              <div class="row">
+              <!--Graphics/Media Acc info-->
+                <div class="col-md-7">
+                  <h2>Graphics and Multi-Media</h2>
+                  <p>By Nature, people are visual beings. Websites should not only have good verbal content, but also interesting and eye-pleasing visual content. Graphics can relay a message before user needs to read anything. Using images and graphics makes navigating websites quicker and more enjoyable for users. 
+                  Much like graphics, video content is also an effective and quick way to express a message to users. Offering video content will offer an effective way to express a clear message to your user while adding visual appeal to a website.
+                  Through my experience with my own web business as well as training from Full Sail University, I have gained much experience with both Adobe Photoshop and Illustrator .  I can use these programs for carrying a business brand any where from web to print.
+                  During my time at Full Sail, I have learned and used iMovie and Quicktime for creating professional quality short movies, slides and screencasts. I have used both Vimeo and YouTube as viable options as for creating responsive frames to keep websites space at a minimum for mobile users. 
+                  </p>
+              </div>
+              <div class="col-md-1"></div>
+              <blockquote id="accImg1" class="col-md-4">
+                <img class="img-responsive"src="img/grafixImg.png">
+                <a class="btn btn-default" href="grafix.html">More about Grafix</a>
+                <a class="btn btn-default" href="media.html">More about Multi-Media</a>
+              </blockquote>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     </main><!-- end main page section -->
+
+
+
     <!-- examples feed -->
     <aside class="col-sm-3" >
-      
+      <!--section1-->
+      <div>
+        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+        </p>
+      </div>
+      <!--section2-->
+      <div>
+        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+        </p>
+      </div>
+      <!--section3-->
+      <div>
+        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+        </p>
+      </div>
     </aside> <!-- end aside feed section -->
     </section><!--page section -->
 
