--- a/index.html
+++ b/index.html
@@ -59,24 +59,26 @@
       <!-- main section -->
       <main class="col-sm-9">
       <!-- main header -->
-      <section class = "row">
+      <section class = "row mainArt">
         <!--header and p-->
         <div class="col-sm-4">
           <h1>Creating the Web for Tomorrow</h1>
           <!-- main p -->
           <blockquote>
             <p> 
-            Creating the Web for Today's Small Business and Tomorrow’s Success.
+            Creating the Web for the Modern Business and Tomorrow’s Success
+            </p>
+          </blockquote>
+          <p>
             Specializing in an Assortment of Design/Marketing Trends;
             Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing.
           </p>
-        </blockquote>
       </div>
       <!--iamge-->
-      <div class="col-sm-8">
+      <div class="col-sm-8 mainImg">
         <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
       </div>
-    </section>
+    </section><!--end main article section-->
 
 
     <!--web design accordion-->
