--- a/index.html
+++ b/index.html
@@ -61,22 +61,25 @@
       <!-- main header -->
       <section class = "row mainArt">
         <!--header and p-->
-        <div class="col-sm-4">
+        <div class="col-sm-5">
           <h1>Creating the Web for Tomorrow</h1>
           <!-- main p -->
           <blockquote>
             <p> 
-            Creating the Web for the Modern Business and Tomorrow’s Success
+            Specializing in an Assortment of Design/Marketing Trends; <br>
+            Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing
             </p>
           </blockquote>
-          <p>
-            Specializing in an Assortment of Design/Marketing Trends;
-            Web Design, Web Development, Graphic Design, Multi-Media and Social Marketing.
-          </p>
       </div>
       <!--iamge-->
-      <div class="col-sm-8 mainImg">
+      <div class="col-sm-7 mainImg">
         <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+      </div>
+      <!-- main p -->
+      <div class="row">
+         <p class ="mainP">
+            As more and more users expand to wider range of devices such as mobile, tablets, laptops, desktops, etc; it has become clear, the web is an ever-changing world. The most successful companies stay on top of latest trends and new ways of increased communication with its customer base. Understanding the web and where it is going can change the game for any business. My unique skill set in current front end and server side technologies combined with my marketing know-how gives me a distinct advantage in harnessing in a way best suited for my clients and their brand. 
+          </p>
       </div>
     </section><!--end main article section-->
 
@@ -106,8 +109,8 @@
               </div>
               <div class="col-md-1"></div>
               <blockquote id="accImg1" class="col-md-4">
-                <img class="img-responsive"src="img/logoImage.png">
-                <a class="btn btn-default" href="webDesign.html">Click Here to Learn More</a>
+                <img class="img-responsive fullsize"src="img/logo.png">
+                <a class="btn btn-primary" href="#">Click Here to Learn More</a>
               </blockquote>
             </div>
           </div>
@@ -116,7 +119,7 @@
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
               <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Social Marketing
+                Marketing
                 <img src="img/icon2.png" alt="Marketing">
               </a>
             </h4>
@@ -130,7 +133,7 @@
                   <p>The Internet brings a unique opportunity to Small Businesses. Social Media has become a leading resource in Marketing to the masses; world-wide.  As the many turn to social websites, business too are seizing this opportunity to spread the visibility of their brand. Often this can be done organically or at a small advertising fee cost. When a campaign is executed correctly, this can level the playing field between small and big business.   
                   I have 4+ years experience in in marketing through my own Facebook and created Etsy chat Forum. Through my own experience and countless hours of research, I am able to offer advice and create solutions to guide any business through the social channels to create the perfect online brand persona.
                   </p>
-                  <a class="btn btn-default" href="sm.html">Click Here to Learn More</a>
+                  <a class="btn btn-primary" href="#">Click Here to Learn More</a>
                 </div>
               <div class="col-md-1"></div>
               <blockquote id="accImg1" class="col-md-4">
@@ -144,7 +147,7 @@
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Graphics/Multi-Media
+                Graphic Design
                 <img src="img/icon3.png" alt="Graphic Design">
               </a>
             </h4>
@@ -164,8 +167,8 @@
               <div class="col-md-1"></div>
               <blockquote id="accImg1" class="col-md-4">
                 <img class="img-responsive"src="img/grafixImg.png">
-                <a class="btn btn-default" href="grafix.html">More about Grafix</a>
-                <a class="btn btn-default" href="media.html">More about Multi-Media</a>
+                <a class="btn btn-primary" href="#">More about Grafix</a>
+                <a class="btn btn-primary" href="#">More about Multi-Media</a>
               </blockquote>
             </div>
             </div>
