--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Web Design
+                Web Development
                 <img src="img/icon1.png" alt="Web Design">
               </a>
             </h4>
@@ -109,7 +109,7 @@
               </div>
               <div class="col-md-1"></div>
               <blockquote id="accImg1" class="col-md-4">
-                <img class="img-responsive fullsize"src="img/logo.png">
+                <img class="img-responsive fullsize"src="img/logo.svg">
                 <a class="btn btn-primary" href="#">Click Here to Learn More</a>
               </blockquote>
             </div>
@@ -186,21 +186,21 @@
       <div>
         <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
       <!--section2-->
       <div>
         <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
       <!--section3-->
       <div>
         <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary" href="#">More...</a>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
     </aside> <!-- end aside feed section -->
