--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="row">
               <!--Social Marketing info-->
                 <div class="col-md-7">
-                  <h2>Social Marketing</h2>
+                  <h2>Web Marketing</h2>
                   <p>The Internet brings a unique opportunity to Small Businesses. Social Media has become a leading resource in Marketing to the masses; world-wide.  As the many turn to social websites, business too are seizing this opportunity to spread the visibility of their brand. Often this can be done organically or at a small advertising fee cost. When a campaign is executed correctly, this can level the playing field between small and big business.   
                   I have 4+ years experience in in marketing through my own Facebook and created Etsy chat Forum. Through my own experience and countless hours of research, I am able to offer advice and create solutions to guide any business through the social channels to create the perfect online brand persona.
                   </p>
