--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
     <header>
-      <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -73,7 +73,7 @@
       </div>
       <!--iamge-->
       <div class="col-sm-7 mainImg">
-        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize img-thumbnail">
       </div>
       <!-- main p -->
       <div class="row">
@@ -108,9 +108,9 @@
                   </p>
               </div>
               <div class="col-md-1"></div>
-              <blockquote id="accImg1" class="col-md-4">
+              <blockquote id="accBlock1" class="col-md-4">
                 <img class="img-responsive fullsize"src="img/logo.svg">
-                <a class="btn btn-primary" href="#">Click Here to Learn More</a>
+                <a class="btn btn-primary accBtn fullBtn" href="#">Click Here to Learn More</a>
               </blockquote>
             </div>
           </div>
@@ -133,10 +133,10 @@
                   <p>The Internet brings a unique opportunity to Small Businesses. Social Media has become a leading resource in Marketing to the masses; world-wide.  As the many turn to social websites, business too are seizing this opportunity to spread the visibility of their brand. Often this can be done organically or at a small advertising fee cost. When a campaign is executed correctly, this can level the playing field between small and big business.   
                   I have 4+ years experience in in marketing through my own Facebook and created Etsy chat Forum. Through my own experience and countless hours of research, I am able to offer advice and create solutions to guide any business through the social channels to create the perfect online brand persona.
                   </p>
-                  <a class="btn btn-primary" href="#">Click Here to Learn More</a>
+                  <a class="btn btn-primary accBtn" href="#">Click Here to Learn More</a>
                 </div>
               <div class="col-md-1"></div>
-              <blockquote id="accImg1" class="col-md-4">
+              <blockquote class="col-md-4">
                 <img class="img-responsive"src="img/smImg.png">
               </blockquote>
               </div>
@@ -165,10 +165,10 @@
                   </p>
               </div>
               <div class="col-md-1"></div>
-              <blockquote id="accImg1" class="col-md-4">
+              <blockquote id="accBlock3"class="col-md-4">
                 <img class="img-responsive"src="img/grafixImg.png">
-                <a class="btn btn-primary" href="#">More about Grafix</a>
-                <a class="btn btn-primary" href="#">More about Multi-Media</a>
+                <a class="btn btn-primary accBtn fullBtn" href="#">More about Grafix</a>
+                <a class="btn btn-primary accBtn fullBtn" href="#">More about Multi-Media</a>
               </blockquote>
             </div>
             </div>
@@ -184,9 +184,9 @@
     <aside class="col-sm-3" >
       <!--section1-->
       <div>
-        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
+        <img src="img/aside1.png" alt="computer" class="img-responsive fullsize">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
+          MVC frameworks are useful for creating one-page applications. A few examples would be Angular.js, Ember.js and Node.js. Implementing these frameworks for web projects decrease load time and boast cross browser compatibility. This is an example of a project I built for school… <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
       <!--section2-->
