--- a/index.html
+++ b/index.html
@@ -183,24 +183,28 @@
     <!-- examples feed -->
     <aside class="col-sm-3" >
       <!--section1-->
-      <div>
+      <div class="asideBox">
         <img src="img/aside1.png" alt="computer" class="img-responsive fullsize">
         <p>
           MVC frameworks are useful for creating one-page applications. A few examples would be Angular.js, Ember.js and Node.js. Implementing these frameworks for web projects decrease load time and boast cross browser compatibility. This is an example of a project I built for school… <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
       <!--section2-->
-      <div>
-        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
+      <div class="asideBox">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FEsxVOMS6iQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <p class="asideP">
+          This is a screencast that I created using QuickTime for recording and iMovie for editing. In this case I discuss using EmberJS for creating a simple one-page-app... <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
       <!--section3-->
-      <div>
-        <img src="img/main.jpg" alt="computer" class="img-responsive fullsize">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in mi ut ante ultrices maximus id non turpis. Donec fringilla, est ac lacinia lacinia, metus massa pretium odio, sed consectetur est urna ac justo. Etiam sit amet maximus elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia <a class="btn btn-primary btn-sm" href="#">More...</a>
+      <div class="asideBox">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Dce_-CV0nAc" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <p class="asideP">
+          This is a Crud application I built using php and mysql for a school project. Users are able to create, edit and delete content.  This video goes through a demo of how this application works… <a class="btn btn-primary btn-sm" href="#">More...</a>
         </p>
       </div>
     </aside> <!-- end aside feed section -->
