--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
     <aside class="col-sm-3" >
       <!--section1-->
       <div class="asideBox">
-        <img src="img/aside1.png" alt="computer" class="img-responsive fullsize">
+        <img src="img/aside1.png" alt="computer" class="img-responsive fullsize img-thumbnail">
         <p>
-          MVC frameworks are useful for creating one-page applications. A few examples would be Angular.js, Ember.js and Node.js. Implementing these frameworks for web projects decrease load time and boast cross browser compatibility. This is an example of a project I built for school… <a class="btn btn-primary btn-sm" href="#">More...</a>
+          MVC frameworks are useful for creating one-page applications. A few examples would be Angular.js, Ember.js and Node.js. Implementing these frameworks for web projects decrease load time and boast cross browser compatibility. This is an example of a project I built for school… <a class="btn btn-primary btn-sm" href="http://joannamok.github.io/Portfolio/Angular/index.html#/new">More...</a>
         </p>
       </div>
       <!--section2-->
       <div class="asideBox">
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive embed-responsive-16by9 img-thumbnail">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FEsxVOMS6iQ" frameborder="0" allowfullscreen></iframe>
         </div>
         <p class="asideP">
@@ -200,7 +200,7 @@
       </div>
       <!--section3-->
       <div class="asideBox">
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive embed-responsive-16by9 img-thumbnail">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Dce_-CV0nAc" frameborder="0" allowfullscreen></iframe>
         </div>
         <p class="asideP">
